# rbac_canister

./: .gitignore  Cargo.toml  LICENSE  README.md  dfx.json  note.txt
src/rbac/: Cargo.toml  rbac.did
src/rbac/src/: acl.rs  canister.rs  guard.rs  lib.rs  storage.rs
