[package]
name = "rbac"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib"]

[dependencies]
candid = "0.9.3"
ic-cdk = "0.10.0"
ic-stable-structures = "0.5.6"
ic0 = "0.18.11"
serde = "1.0.171"
num = "0.4"
num-traits = "0.2.12"
num-derive = "0.3"
getrandom = { version = "0.2", features = ["js"] }
